add-on_website/kube/musicml_service.yml
apiVersion: v1
kind: Service
metadata:
  name: musicml-service
  namespace: musicml
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: musicml-app
